@@ -1,5 +1,10 @@
 2007-02-06  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add the application/x-ica mime-type,
+	patch from Jack Johnson <knapjack@gmail.com> (Closes: #3820)
+
+2007-02-06  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: compressed SVG files aren't XML files,
 	so .svgz files now use image/svg as their mime-type (Closes: #9873)
 
